--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,32 +9,30 @@ apscheduler==3.9.1.post1
     #   -r requirements-dev.in
     #   mqtt-framework
 attrs==22.2.0
-    # via
-    #   jsonschema
-    #   pytest
-    #   tavern
+    # via pytest
+bandit[toml]==1.7.5
+    # via -r requirements-dev.in
+black==23.1.0
+    # via -r requirements-dev.in
 build==0.10.0
     # via pip-tools
 cacheout==0.13.1
     # via -r requirements.txt
-certifi==2022.12.7
-    # via requests
-charset-normalizer==3.0.1
-    # via requests
 cheroot==9.0.0
     # via -r requirements-dev.in
 click==8.1.3
     # via
+    #   black
     #   flask
     #   pip-tools
 commonmark==0.9.1
     # via rich
+coverage==7.2.1
+    # via -r requirements-dev.in
 crccheck==1.1
     # via -r requirements.txt
 deprecated==1.2.13
     # via limits
-docopt==0.6.2
-    # via pykwalify
 flask==2.2.2
     # via
     #   -r requirements-dev.in
@@ -50,8 +48,10 @@ flask-mqtt @ git+https://github.com/stlehmann/Flask-MQTT.git@master
     # via
     #   -r requirements-dev.in
     #   mqtt-framework
-idna==3.4
-    # via requests
+gitdb==4.0.10
+    # via gitpython
+gitpython==3.1.31
+    # via bandit
 iniconfig==2.0.0
     # via pytest
 itsdangerous==2.1.2
@@ -60,10 +60,6 @@ jaraco-functools==3.5.2
     # via cheroot
 jinja2==3.1.2
     # via flask
-jmespath==0.10.0
-    # via tavern
-jsonschema==3.2.0
-    # via tavern
 limits==3.1.5
     # via flask-limiter
 markupsafe==2.1.1
@@ -76,21 +72,26 @@ more-itertools==9.0.0
     #   jaraco-functools
 mqtt-framework @ git+https://github.com/paulianttila/MQTT-Framework.git@v1.0.2
     # via -r requirements-dev.in
+mypy-extensions==1.0.0
+    # via black
 ordered-set==4.1.0
     # via flask-limiter
 packaging==23.0
     # via
+    #   black
     #   build
     #   limits
     #   pytest
 paho-mqtt==1.5.1
-    # via
-    #   flask-mqtt
-    #   tavern
+    # via flask-mqtt
+pathspec==0.11.1
+    # via black
 pbr==5.11.1
     # via stevedore
 pip-tools==6.12.1
     # via -r requirements-dev.in
+platformdirs==3.1.1
+    # via black
 pluggy==1.0.0
     # via pytest
 prometheus-client==0.15.0
@@ -101,44 +102,30 @@ prometheus-flask-exporter==0.21.0
     #   mqtt-framework
 pygments==2.14.0
     # via rich
-pyjwt==2.6.0
-    # via tavern
-pykwalify==1.8.0
-    # via tavern
 pyproject-hooks==1.0.0
     # via build
-pyrsistent==0.19.3
-    # via jsonschema
 pytest==7.2.0
-    # via
-    #   -r requirements-dev.in
-    #   tavern
-python-box==5.4.1
-    # via tavern
-python-dateutil==2.8.2
-    # via pykwalify
+    # via -r requirements-dev.in
 pytz==2020.5
     # via apscheduler
 pytz-deprecation-shim==0.1.0.post0
     # via tzlocal
 pyyaml==6.0
-    # via tavern
-requests==2.28.2
-    # via tavern
+    # via bandit
 rich==12.6.0
-    # via flask-limiter
-ruamel-yaml==0.17.21
-    # via pykwalify
+    # via
+    #   bandit
+    #   flask-limiter
+ruff==0.0.256
+    # via -r requirements-dev.in
 six==1.16.0
     # via
     #   apscheduler
     #   cheroot
-    #   jsonschema
-    #   python-dateutil
+smmap==5.0.0
+    # via gitdb
 stevedore==3.3.3
-    # via tavern
-tavern==2.0.0
-    # via -r requirements-dev.in
+    # via bandit
 typing-extensions==4.4.0
     # via
     #   flask-limiter
@@ -147,8 +134,6 @@ tzdata==2022.7
     # via pytz-deprecation-shim
 tzlocal==4.2
     # via apscheduler
-urllib3==1.26.14
-    # via requests
 werkzeug==2.2.2
     # via flask
 wheel==0.38.4
